# gn-ninja-demo

./: .gn  BUILD.gn  Cargo.toml  build.rs  build_rust.py
.github/workflows/: ci.yaml
csrc/: calc.c  calc.h
src/: main.rs
toolchain/: BUILD.gn
